polar chart alignment fix

--- a/src/app/analytics/analytics.component.css
+++ b/src/app/analytics/analytics.component.css
@@ -333,10 +333,9 @@
     /* background-color: #00ff00; */
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    gap: 10px;
     align-items: center;
     font-weight: bold;
+    gap: 20px;
 }
  
  
@@ -344,6 +343,7 @@
 .bottom_two {
     height: 50%;
     width: 100%;
+    gap: 20px;
     /* background-color: #ff0000; */
     border-radius: 10px;
     display: flex;
